--- a/config.gradle
+++ b/config.gradle
@@ -14,15 +14,14 @@ ext {
             "appcompat-v7"            : 'com.android.support:appcompat-v7:23.4.0',
             "design"                  : 'com.android.support:design:23.4.0',
             "recyclerview-v7"         : 'com.android.support:recyclerview-v7:23.4.0',
-            
+
             "butterknife"             : 'com.jakewharton:butterknife:8.4.0',
             "apt_butterknife-compiler": 'com.jakewharton:butterknife-compiler:8.4.0',
-            "okhttp3"                 : 'com.squareup.okhttp3:okhttp:3.4.1',
-            "okhttputils"             : 'com.zhy:okhttputils:2.6.2',
             "glide"                   : 'com.github.bumptech.glide:glide:3.7.0',
-            "gson"                    : 'com.google.code.gson:gson:2.7',
-            "rxandroid"               : 'io.reactivex:rxandroid:1.2.1',
-            "rxjava"                  : 'io.reactivex:rxjava:1.1.6',
+            "gson"                    : 'com.google.code.gson:gson:2.8.0',
+            "rxandroid"               : 'io.reactivex.rxjava2:rxandroid:2.0.1',
+            "rxjava"                  : 'io.reactivex.rxjava2:rxjava:2.0.1',
+            "logger"                  : 'com.orhanobut:logger:1.15',
 
     ]
 }
