--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -22,12 +22,17 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(path: ':library')
     compile rootProject.ext.dependencies["appcompat-v7"]
     compile rootProject.ext.dependencies["design"]
     compile rootProject.ext.dependencies["recyclerview-v7"]
-    
+
     compile rootProject.ext.dependencies["butterknife"]
     apt rootProject.ext.dependencies["apt_butterknife-compiler"]
 
+    compile rootProject.ext.dependencies["glide"]
+    compile rootProject.ext.dependencies["gson"]
+    compile rootProject.ext.dependencies["rxandroid"]
+    compile rootProject.ext.dependencies["rxjava"]
+
+    compile rootProject.ext.dependencies["logger"]
 }
