--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,12 @@ apply from: "config.gradle"
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'me.tatarka:gradle-retrolambda:3.5.0'
     }
 }
 
