--- a/config.gradle
+++ b/config.gradle
@@ -19,9 +19,15 @@ ext {
             "apt_butterknife-compiler": 'com.jakewharton:butterknife-compiler:8.4.0',
             "glide"                   : 'com.github.bumptech.glide:glide:3.7.0',
             "gson"                    : 'com.google.code.gson:gson:2.8.0',
-            "rxandroid"               : 'io.reactivex.rxjava2:rxandroid:2.0.1',
-            "rxjava"                  : 'io.reactivex.rxjava2:rxjava:2.0.1',
-            "logger"                  : 'com.orhanobut:logger:1.15',
 
+            "rxandroid2"              : 'io.reactivex.rxjava2:rxandroid:2.0.1',
+            "rxjava2"                 : 'io.reactivex.rxjava2:rxjava:2.0.1',
+            "rxandroid"               : 'io.reactivex:rxandroid:1.2.1',
+            "rxjava"                  : 'io.reactivex:rxjava:1.2.6',
+            "retrofit"                : 'com.squareup.retrofit2:retrofit:2.1.0',
+            "retrofit-adapter-rxjava" : 'com.squareup.retrofit2:adapter-rxjava:2.1.0',
+            "retrofit-converter-gson" : 'com.squareup.retrofit2:converter-gson:2.1.0',
+
+            "logger"                  : 'com.orhanobut:logger:1.15',
     ]
 }
