--- a/build.gradle
+++ b/build.gradle
@@ -7,16 +7,15 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'me.tatarka:gradle-retrolambda:3.5.0'
+      classpath 'com.android.tools.build:gradle:2.3.3'
+      classpath 'me.tatarka:gradle-retrolambda:3.7.0'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
-        mavenCentral() //butterknife-library glide
+      mavenCentral()
     }
 }
 
