--- a/config.gradle
+++ b/config.gradle
@@ -1,33 +1,58 @@
 ext {
-    android = [
-            compileSdkVersion: 23,
-            buildToolsVersion: "23.0.3",
-            applicationId    : "cn.winxo.mvp",
-            minSdkVersion    : 21,
-            targetSdkVersion : 22,
-            versionCode      : 1,
-            versionName      : "1.0",
-    ]
+  android = [compileSdkVersion: 26,
+             buildToolsVersion: "26.0.1",
+             minSdkVersion    : 21,
+             targetSdkVersion : 22,
+             versionCode      : gitVersionCode(),
+             versionName      : gitVersionTag()]
 
-    dependencies = [
-            "support-v4"              : 'com.android.support:support-v4:23.4.0',
-            "appcompat-v7"            : 'com.android.support:appcompat-v7:23.4.0',
-            "design"                  : 'com.android.support:design:23.4.0',
-            "recyclerview-v7"         : 'com.android.support:recyclerview-v7:23.4.0',
 
-            "butterknife"             : 'com.jakewharton:butterknife:8.4.0',
-            "apt_butterknife-compiler": 'com.jakewharton:butterknife-compiler:8.4.0',
-            "glide"                   : 'com.github.bumptech.glide:glide:3.7.0',
-            "gson"                    : 'com.google.code.gson:gson:2.8.0',
+  dependencies = ["support-v4"              : 'com.android.support:support-v4:25.3.1',
+                  "appcompat-v7"            : 'com.android.support:appcompat-v7:25.3.1',
+                  "design"                  : 'com.android.support:design:25.3.1',
+                  "recyclerview-v7"         : 'com.android.support:recyclerview-v7:25.3.1',
+                  "cardview-v7"             : 'com.android.support:cardview-v7:25.3.1',
 
-            "rxandroid2"              : 'io.reactivex.rxjava2:rxandroid:2.0.1',
-            "rxjava2"                 : 'io.reactivex.rxjava2:rxjava:2.0.1',
-            "rxandroid"               : 'io.reactivex:rxandroid:1.2.1',
-            "rxjava"                  : 'io.reactivex:rxjava:1.2.6',
-            "retrofit"                : 'com.squareup.retrofit2:retrofit:2.1.0',
-            "retrofit-adapter-rxjava" : 'com.squareup.retrofit2:adapter-rxjava:2.1.0',
-            "retrofit-converter-gson" : 'com.squareup.retrofit2:converter-gson:2.1.0',
+                  "butterknife"             : 'com.jakewharton:butterknife:8.5.1',
+                  "butterknife-compiler"    : 'com.jakewharton:butterknife-compiler:8.5.1',
+                  "stetho"                  : 'com.facebook.stetho:stetho:1.4.1',
+                  "stetho_realm"            : 'com.uphyca:stetho_realm:2.0.0',
 
-            "logger"                  : 'com.orhanobut:logger:1.15',
-    ]
+                  "glide"                   : 'com.github.bumptech.glide:glide:3.7.0',
+                  "gson"                    : 'com.google.code.gson:gson:2.7',
+
+                  "rxandroid2"              : 'io.reactivex.rxjava2:rxandroid:2.0.1',
+                  "rxjava2"                 : 'io.reactivex.rxjava2:rxjava:2.1.0',
+                  "rxrelay2"                : 'com.jakewharton.rxrelay2:rxrelay:2.0.0',
+
+                  "rxlint"                  : 'nl.littlerobots.rxlint:rxlint:1.0',
+                  "rxbinding"               : 'com.jakewharton.rxbinding:rxbinding:1.0.0',
+                  "rxbinding-support-v4"    : 'com.jakewharton.rxbinding:rxbinding-support-v4:1.0.0',
+
+                  "retrofit"                : 'com.squareup.retrofit2:retrofit:2.1.0',
+                  "retrofit-adapter-rxjava2": 'com.squareup.retrofit2:adapter-rxjava2:2.2.0',
+                  "retrofit-converter-gson" : 'com.squareup.retrofit2:converter-gson:2.1.0',
+
+                  "dagger"                  : 'com.google.dagger:dagger:2.10',
+                  "dagger-compiler"         : 'com.google.dagger:dagger-compiler:2.10',
+
+                  "material-dialogs"        : 'com.afollestad.material-dialogs:core:0.9.1.0',
+                  "datetimepicker"          : 'com.github.flavienlaurent.datetimepicker:library:0.0.2',
+                  "leakcanary"              : 'com.squareup.leakcanary:leakcanary-android:1.5.1',
+                  "leakcanary-no-op"        : 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1',
+                  'androidasync'            : 'com.koushikdutta.async:androidasync:2.1.9',
+                  'materialedittext'        : 'com.rengwuxian.materialedittext:library:2.1.4',
+                  'timber'                  : 'com.jakewharton.timber:timber:4.5.1',]
+}
+
+static def gitVersionTag() {
+  def cmd = 'git describe --tags'
+  def version = cmd.execute().text.trim()
+  return version
+}
+
+static def gitVersionCode() {
+  def cmd = 'git rev-list HEAD  --count'
+  def versionCode = cmd.execute().text.trim().toInteger()
+  return versionCode
 }
