--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,47 +1,47 @@
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion rootProject.ext.android.compileSdkVersion
-    buildToolsVersion rootProject.ext.android.buildToolsVersion
+  compileSdkVersion rootProject.ext.android.compileSdkVersion
+  buildToolsVersion rootProject.ext.android.buildToolsVersion
 
-    defaultConfig {
-        applicationId rootProject.ext.android.applicationId
-        minSdkVersion rootProject.ext.android.minSdkVersion
-        targetSdkVersion rootProject.ext.android.targetSdkVersion
-        versionCode rootProject.ext.android.versionCode
-        versionName rootProject.ext.android.versionName
+  defaultConfig {
+    applicationId "cn.winxo.mvp"
+    minSdkVersion rootProject.ext.android.minSdkVersion
+    targetSdkVersion rootProject.ext.android.targetSdkVersion
+    versionCode rootProject.ext.android.versionCode
+    versionName rootProject.ext.android.versionName
+  }
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+  }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile rootProject.ext.dependencies["appcompat-v7"]
-    compile rootProject.ext.dependencies["design"]
-    compile rootProject.ext.dependencies["recyclerview-v7"]
+  compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile rootProject.ext.dependencies["appcompat-v7"]
+  compile rootProject.ext.dependencies["design"]
+  compile rootProject.ext.dependencies["recyclerview-v7"]
 
-    compile rootProject.ext.dependencies["butterknife"]
-    apt rootProject.ext.dependencies["apt_butterknife-compiler"]
+  compile rootProject.ext.dependencies["butterknife"]
+  annotationProcessor rootProject.ext.dependencies["butterknife-compiler"]
 
-    compile rootProject.ext.dependencies["glide"]
-    compile rootProject.ext.dependencies["gson"]
-    compile rootProject.ext.dependencies["rxandroid"]
-    compile rootProject.ext.dependencies["rxjava"]
-    compile rootProject.ext.dependencies["retrofit"]
-    compile rootProject.ext.dependencies["retrofit-adapter-rxjava"]
-    compile rootProject.ext.dependencies["retrofit-converter-gson"]
+  compile rootProject.ext.dependencies["glide"]
+  compile rootProject.ext.dependencies["gson"]
 
-    compile rootProject.ext.dependencies["logger"]
+  compile rootProject.ext.dependencies["rxjava2"]
+  compile rootProject.ext.dependencies["rxandroid2"]
+  compile rootProject.ext.dependencies["rxrelay2"]
+
+  compile rootProject.ext.dependencies["retrofit"]
+  compile rootProject.ext.dependencies["retrofit-adapter-rxjava2"]
+  compile rootProject.ext.dependencies["retrofit-converter-gson"]
 }
