--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ buildscript {
   repositories {
     jcenter()
     mavenCentral()
+    maven {
+      url 'https://maven.google.com/'
+      name 'Google'
+    }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:3.0.1'
@@ -15,6 +19,7 @@ allprojects {
   repositories {
     jcenter()
     mavenCentral()
+    google()
   }
 }
 
