--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -26,10 +26,15 @@ android {
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile project(path: ':library')
+
+  testCompile 'junit:junit:4.12'
+  testCompile "org.mockito:mockito-core:2.13.0"
+  androidTestCompile "org.mockito:mockito-android:2.13.0"
+
   compile rootProject.ext.dependencies["appcompat-v7"]
   compile rootProject.ext.dependencies["design"]
   compile rootProject.ext.dependencies["recyclerview-v7"]
-
 
   compile rootProject.ext.dependencies["glide"]
   compile rootProject.ext.dependencies["gson"]
