--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -43,6 +43,8 @@ dependencies {
   implementation rootProject.ext.dependencies["rxandroid2"]
   implementation rootProject.ext.dependencies["rxrelay2"]
 
+  implementation rootProject.ext.dependencies["timber"]
+
   implementation rootProject.ext.dependencies["retrofit"]
   implementation rootProject.ext.dependencies["retrofit-adapter-rxjava2"]
   implementation rootProject.ext.dependencies["retrofit-converter-gson"]
