--- a/config.gradle
+++ b/config.gradle
@@ -3,9 +3,12 @@ ext {
              buildToolsVersion: "26.0.2",
              minSdkVersion    : 21,
              targetSdkVersion : 22,
+
              versionCode      : gitVersionCode(),
              versionName      : gitVersionTag()]
 
+
+  supportVersion = "25.3.1"
 
   dependencies = ["support-v4"              : 'com.android.support:support-v4:25.3.1',
                   "appcompat-v7"            : 'com.android.support:appcompat-v7:25.3.1',
