--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -38,11 +38,13 @@ dependencies {
   testImplementation 'junit:junit:4.12'
 
 
-
   implementation "com.android.support:support-v4:${rootProject.ext.supportVersion}"
   implementation "com.android.support:appcompat-v7:${rootProject.ext.supportVersion}"
   implementation "com.android.support:design:${rootProject.ext.supportVersion}"
 
+
+  implementation 'com.google.dagger:dagger:2.6'
+  annotationProcessor 'com.google.dagger:dagger-compiler:2.6'
 
   implementation rootProject.ext.dependencies["glide"]
   implementation rootProject.ext.dependencies["gson"]
@@ -52,6 +54,7 @@ dependencies {
   implementation rootProject.ext.dependencies["rxrelay2"]
 
   implementation rootProject.ext.dependencies["timber"]
+  implementation 'com.squareup.picasso:picasso:2.5.2'
 
   implementation rootProject.ext.dependencies["retrofit"]
   implementation rootProject.ext.dependencies["retrofit-adapter-rxjava2"]
@@ -61,4 +64,8 @@ dependencies {
   androidTestCompile "com.android.support:support-annotations:${rootProject.ext.supportVersion}"
   androidTestImplementation 'com.android.support.test:runner:1.0.1'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+  testImplementation "org.mockito:mockito-core:2.13.0"
+  androidTestImplementation "org.mockito:mockito-android:2.13.0"
+  testImplementation 'org.robolectric:robolectric:3.7'
 }
