--- a/config.gradle
+++ b/config.gradle
@@ -1,14 +1,18 @@
 ext {
-  android = [compileSdkVersion: 26,
-             buildToolsVersion: "26.0.2",
-             minSdkVersion    : 21,
-             targetSdkVersion : 22,
+  compileSdkVersion = 26
+  minSdkVersion = 21
+  targetSdkVersion = 22
+  versionCode = 1
+  versionName = "1.0.0"
 
-             versionCode      : gitVersionCode(),
-             versionName      : gitVersionTag()]
-
-
-  supportVersion = "25.3.1"
+  supportVersion = "27.1.1"
+  gsonVersion = "2.7"
+  rxjavaVersion = "2.1.0"
+  rxAndroidVersion = "2.0.1"
+  rxrelayVersion = "2.0.0"
+  retrofitVersion = "2.1.0"
+  adapterRxjava2Version = "2.2.0"
+  converterGsonVersion = "2.1.0"
 
   dependencies = ["support-v4"              : 'com.android.support:support-v4:25.3.1',
                   "appcompat-v7"            : 'com.android.support:appcompat-v7:25.3.1',
@@ -16,8 +20,6 @@ ext {
                   "recyclerview-v7"         : 'com.android.support:recyclerview-v7:25.3.1',
                   "cardview-v7"             : 'com.android.support:cardview-v7:25.3.1',
 
-                  "butterknife"             : 'com.jakewharton:butterknife:8.5.1',
-                  "butterknife-compiler"    : 'com.jakewharton:butterknife-compiler:8.5.1',
                   "stetho"                  : 'com.facebook.stetho:stetho:1.4.1',
                   "stetho_realm"            : 'com.uphyca:stetho_realm:2.0.0',
 
@@ -28,34 +30,10 @@ ext {
                   "rxjava2"                 : 'io.reactivex.rxjava2:rxjava:2.1.0',
                   "rxrelay2"                : 'com.jakewharton.rxrelay2:rxrelay:2.0.0',
 
-                  "rxlint"                  : 'nl.littlerobots.rxlint:rxlint:1.0',
-                  "rxbinding"               : 'com.jakewharton.rxbinding:rxbinding:1.0.0',
-                  "rxbinding-support-v4"    : 'com.jakewharton.rxbinding:rxbinding-support-v4:1.0.0',
-
                   "retrofit"                : 'com.squareup.retrofit2:retrofit:2.1.0',
                   "retrofit-adapter-rxjava2": 'com.squareup.retrofit2:adapter-rxjava2:2.2.0',
                   "retrofit-converter-gson" : 'com.squareup.retrofit2:converter-gson:2.1.0',
 
-                  "dagger"                  : 'com.google.dagger:dagger:2.10',
-                  "dagger-compiler"         : 'com.google.dagger:dagger-compiler:2.10',
-
-                  "material-dialogs"        : 'com.afollestad.material-dialogs:core:0.9.1.0',
-                  "datetimepicker"          : 'com.github.flavienlaurent.datetimepicker:library:0.0.2',
-                  "leakcanary"              : 'com.squareup.leakcanary:leakcanary-android:1.5.1',
-                  "leakcanary-no-op"        : 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1',
-                  'androidasync'            : 'com.koushikdutta.async:androidasync:2.1.9',
-                  'materialedittext'        : 'com.rengwuxian.materialedittext:library:2.1.4',
-                  'timber'                  : 'com.jakewharton.timber:timber:4.5.1',]
+  ]
 }
 
-static def gitVersionTag() {
-  def cmd = 'git describe --tags'
-  def version = cmd.execute().text.trim()
-  return version
-}
-
-static def gitVersionCode() {
-  def cmd = 'git rev-list HEAD  --count'
-  def versionCode = cmd.execute().text.trim().toInteger()
-  return versionCode
-}
