--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
   // Room (use 1.1.0-beta3 for latest beta)
   implementation "android.arch.persistence.room:runtime:1.0.0"
   annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+  implementation "android.arch.persistence.room:rxjava2:1.0.0"
+
 
 
   // test-only
