--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,6 @@ android {
     targetSdkVersion rootProject.ext.targetSdkVersion
     versionCode rootProject.ext.versionCode
     versionName rootProject.ext.versionName
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
   buildTypes {
     release {
@@ -32,9 +31,6 @@ configurations.all {
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-  testImplementation 'junit:junit:4.12'
-
   implementation "com.android.support:support-v4:${rootProject.ext.supportVersion}"
   implementation "com.android.support:appcompat-v7:${rootProject.ext.supportVersion}"
   implementation "com.android.support:design:${rootProject.ext.supportVersion}"
@@ -50,18 +46,7 @@ dependencies {
   implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.converterGsonVersion}"
 
   // Room (use 1.1.0-beta3 for latest beta)
-  implementation "android.arch.persistence.room:runtime:1.0.0"
-  annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-  implementation "android.arch.persistence.room:rxjava2:1.0.0"
-
-
-
-  // test-only
-  androidTestImplementation "com.android.support:support-annotations:${rootProject.ext.supportVersion}"
-  androidTestImplementation 'com.android.support.test:runner:1.0.1'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
-  testImplementation "org.mockito:mockito-core:2.13.0"
-  androidTestImplementation "org.mockito:mockito-android:2.13.0"
-  testImplementation 'org.robolectric:robolectric:3.7'
+  implementation "android.arch.persistence.room:runtime:${rootProject.ext.roomVersion}"
+  annotationProcessor "android.arch.persistence.room:compiler:${rootProject.ext.roomVersion}"
+  implementation "android.arch.persistence.room:rxjava2:${rootProject.ext.roomVersion}"
 }
