--- a/config.gradle
+++ b/config.gradle
@@ -13,27 +13,6 @@ ext {
   retrofitVersion = "2.1.0"
   adapterRxjava2Version = "2.2.0"
   converterGsonVersion = "2.1.0"
-
-  dependencies = ["support-v4"              : 'com.android.support:support-v4:25.3.1',
-                  "appcompat-v7"            : 'com.android.support:appcompat-v7:25.3.1',
-                  "design"                  : 'com.android.support:design:25.3.1',
-                  "recyclerview-v7"         : 'com.android.support:recyclerview-v7:25.3.1',
-                  "cardview-v7"             : 'com.android.support:cardview-v7:25.3.1',
-
-                  "stetho"                  : 'com.facebook.stetho:stetho:1.4.1',
-                  "stetho_realm"            : 'com.uphyca:stetho_realm:2.0.0',
-
-                  "glide"                   : 'com.github.bumptech.glide:glide:3.7.0',
-                  "gson"                    : 'com.google.code.gson:gson:2.7',
-
-                  "rxandroid2"              : 'io.reactivex.rxjava2:rxandroid:2.0.1',
-                  "rxjava2"                 : 'io.reactivex.rxjava2:rxjava:2.1.0',
-                  "rxrelay2"                : 'com.jakewharton.rxrelay2:rxrelay:2.0.0',
-
-                  "retrofit"                : 'com.squareup.retrofit2:retrofit:2.1.0',
-                  "retrofit-adapter-rxjava2": 'com.squareup.retrofit2:adapter-rxjava2:2.2.0',
-                  "retrofit-converter-gson" : 'com.squareup.retrofit2:converter-gson:2.1.0',
-
-  ]
+  roomVersion = "1.1.1"
 }
 
