--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
   <application
       android:name=".App"
       android:allowBackup="true"
-      android:icon="@drawable/ic_icon"
+      android:icon="@drawable/logo_square_01"
       android:label="@string/app_name"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
