build: 集成最新的 fabric 和 firebase

--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,15 @@ buildscript {
       name 'Google'
     }
     google()
+    maven {
+      url 'https://maven.fabric.io/public'
+    }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.1.3'
+    classpath 'com.android.tools.build:gradle:3.2.0'
+    // Check for v3.1.2 or higher
+    classpath 'com.google.gms:google-services:4.1.0'
+    classpath 'io.fabric.tools:gradle:1.25.4'
   }
 }
 
