--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.fabric'
 
 android {
   compileSdkVersion rootProject.ext.compileSdkVersion
@@ -58,4 +60,7 @@ dependencies {
   implementation 'me.drakeet.multitype:multitype-kotlin:3.4.4'
 
   implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+  // Check for v11.4.2 or higher
+  implementation 'com.google.firebase:firebase-core:16.0.3'
+  implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
 }
