--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 apply from: "config.gradle"
 
 buildscript {
+  ext.kotlin_version = "1.2.71"
   repositories {
     jcenter()
     mavenCentral()
@@ -15,10 +16,11 @@ buildscript {
     }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.2.0'
+    classpath 'com.android.tools.build:gradle:3.2.1'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     // Check for v3.1.2 or higher
     classpath 'com.google.gms:google-services:4.1.0'
-    classpath 'io.fabric.tools:gradle:1.25.4'
+    classpath 'io.fabric.tools:gradle:1.26.1'
   }
 }
 
