--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@
 #Tue Feb 07 16:00:18 CST 2017
 systemProp.http.proxyHost=127.0.0.1
 systemProp.http.proxyPort=1080
+android.useAndroidX=true
+android.enableJetifier=true
